Template für UI erstellt um neue modi schneller und mit dem selben design zu erstellen

--- a/src/main/resources/META-INF/resources/styles/style.css
+++ b/src/main/resources/META-INF/resources/styles/style.css
@@ -17,6 +17,7 @@ body{
   flex-direction: column;
   transition: all 0.3s ease;
   overflow: hidden;
+  width: 100%;
 }
 
 *{
@@ -336,6 +337,11 @@ code {
 
 .suggestion:hover{
   background-color: rgb(241, 239, 239);
+}
+
+.left-tools{
+  display: flex;
+  gap: 10px;
 }
 
 
