--- a/src/main/resources/templates/multipleChoice.html
+++ b/src/main/resources/templates/multipleChoice.html
@@ -1,66 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>multiple Choice Test</title>
-    <link rel="icon" type="image/x-icon" href="/pictures/Chatbot_Logo.webp">
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/darkmode.css">
-
-    <script src="js/chat/UIService.js"></script>
-</head>
-<body>
-<div class="chat-container">
-    <div class="tool-container">
-        <button class="tool" id="back">zur Skriptauswahl</button>
-        <div class="tool-text-img-box">
-            <div>Theme:</div>
-            <button class="tool" id="darkmode"><img src="pictures/darkmode.svg" width="24px" height="20px"></button>
-        </div>
-
-
-    </div>
-    <div class="conversation-container" id="scroller">
-
-        <div id="conversation">
-
-
-        </div>
-        <div id="anchor"></div>
-    </div>
-
-    <div class="input-container">
-        <label for="input"></label>
-        <textarea rows="1" id="input" class="input" placeholder="Frage mich etwas..."></textarea>
-        <button id="send" class="send"><img src="pictures/send.svg" alt="absenden"></button>
-    </div>
-    <div class="hint-bottom">
-        <p>Der Chat geht nach dem Neuladen der Seite verloren!</p>
-    </div>
-</div>
-</body>
-
-<script>
-
-    const uiService = new UIService();
-    const input = document.getElementById('input');
-
-    window.onload = function() {
-        uiService.loadDarkMode();
-    };
-
-    // EventListener für das Wechseln des Themes
-    document.getElementById('darkmode').addEventListener('click', function() {
-        uiService.toggleDarkMode();
-        uiService.saveDarkMode();
-    });
-
-    // EventListener für das automatische Anpassen des Inputfeldes
-    input.addEventListener('input', function() {
-        input.style.height = 'auto';
-        input.style.height = (input.scrollHeight) + 'px';
-        input.style.maxHeight = '300px';
-    });
-
-</script>
-</html>
+{#include base.html}
+{#title}multiple Choice Modus{/title}
+{#firstMessage}Hallo, wähle ein Skript aus mit dem wir heute lernen{/firstMessage}
+    {#scripts}{/scripts}
+    {#styles}{/styles}
+    {#eventListener}{/eventListener}
+    {#inputText}Lernen wir heute...{/inputText}
+{/include}
