--- a/src/main/resources/META-INF/resources/styles/style.css
+++ b/src/main/resources/META-INF/resources/styles/style.css
@@ -344,6 +344,26 @@ code {
   gap: 10px;
 }
 
+.options{
+  display: flex;
+  gap: 10px;
+}
+
+.option {
+  padding: 15px;
+  border-radius: 300px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  background-color: transparent;
+    color: #000;
+  border: 2px solid #002244;
+}
+
+.option:hover{
+  background-color: #4A90E2;
+    color: #fff;
+}
+
 
 
 @media (max-width: 850px){
