--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,3 +1,5 @@
+{! Dieses Template stellt eine Standard Chatoberfläche dar und kann
+mit Javascript beliebige Variationen von der Klasse Message darstellen. !}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,9 +12,11 @@
   {#insert styles}
   {/insert}
 
-  <script src="js/chat/UIService.js"></script>
-  <script src="js/chat/Message.js"></script>
-  <script src="js/chat/MarkdownParser.js"></script>
+  <script src="js/base/UIService.js"></script>
+  <script src="js/base/Message.js"></script>
+  <script src="js/base/MarkdownParser.js"></script>
+  <script src="js/base/LoadingMessage.js"></script>
+  <script src="js/base/ErrorMessage.js"></script>
   {#insert scripts}
   {/}
 </head>
@@ -36,14 +40,8 @@
   <div class="conversation-container" id="scroller">
 
     <div id="conversation">
-      <div class="ai-message message">
-        <div class="icon"></div>
-        <div class="message-content">
-          <div class="name">Bot</div>
-          <p class="text">{#insert firstMessage}Hallo, wie kann ich dir weiter helfen?
-            {/}</p>
-        </div>
-      </div>
+        {#insert firstMessage}
+        {/}
 
     </div>
     <div id="anchor"></div>
@@ -53,7 +51,7 @@
   <div class="input-container">
     <label for="input"></label>
     <textarea rows="1" id="input" class="input" placeholder="{#insert inputText}Frage mich etwas...{/}"></textarea>
-    {#insert popUp}{/insert}
+    {#insert popUp}{/}
     <button id="send" class="send"><img src="pictures/send.svg" alt="absenden"></button>
   </div>
   <div class="hint-bottom">
@@ -70,6 +68,8 @@
 
   window.onload = function() {
     uiService.loadDarkMode();
+    {#insert onLoad}
+    {/}
   };
 
   // EventListener für das Wechseln des Themes
@@ -87,10 +87,8 @@
 
   // Eventlistener für das Löschen des Chats
   clear.addEventListener('click', function() {
-    const firstMessage = new Message('Chatbot', '{#insert firstMessage}Hallo, wie kann ich dir weiter helfen?{/}', 'ai');
-    uiService.clearMessages(firstMessage);
     {#insert clearMessagesExtension}
-    {/insert}
+    {/}
   });
 
   // Eventlistener für das Beenden des Chats
