--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -1,5 +1,5 @@
 {#include base.html}
-    {#title}multiple Choice Modus{/title}
+    {#title}Chat Modus{/title}
   {#scripts}
         <script src="js/chat/DualMessage.js"></script>
         <script src="js/chat/RatingHint.js"></script>
