Quiz wird jz in ui als message dargestellt

--- a/src/main/resources/templates/multipleChoice.html
+++ b/src/main/resources/templates/multipleChoice.html
@@ -6,6 +6,8 @@
     <script src="js/multipleChoice/OptionMessage.js"></script>
     <script src="js/multipleChoice/QuizStartMessage.js"></script>
     <script src="js/multipleChoice/QuizUIService.js"></script>
+    <script src="js/multipleChoice/MultipleChoiceQuizMessage.js"></script>
+    <script src="js/multipleChoice/MultipleChoiceQuestion.js"></script>
     {/scripts}
     {#styles}{/styles}
     {#onLoad}
