--- a/src/main/resources/META-INF/resources/styles/darkmode.css
+++ b/src/main/resources/META-INF/resources/styles/darkmode.css
@@ -120,3 +120,32 @@ a{
     color: #fff;
     transition: all 0.3s ease;
 }
+
+.dark-mode .question-control-buttons:hover{
+    background-color: var(--dark-second);
+    border: #7eb8f5 2px solid;
+}
+
+.dark-mode .question-control-buttons{
+    background-color: var(--dark-second);
+    border: var(--dark-second) 2px solid;
+}
+
+.dark-mode .question{
+    background-color: var(--dark-code);
+    color: #fff;
+}
+
+.dark-mode .answer{
+    background-color: var(--dark-bg);
+    color: #fff;
+}
+
+.dark-mode .answer:hover{
+    background-color: var(--dark-second);
+}
+
+.dark-mode .clicked{
+    background-color: var(--dark-second);
+    color: #fff;
+}
