--- a/src/main/resources/META-INF/resources/styles/dokumente.css
+++ b/src/main/resources/META-INF/resources/styles/dokumente.css
@@ -144,3 +144,66 @@ h1 {
     padding: 5px 10px;
 }
 
+
+.create-lecture-container {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 60vw;
+    z-index: 20;
+    position: absolute;
+    background-color: white;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 0 10px 0 #ccc;
+    display: none;
+    padding-top: 40px;
+}
+
+#close-create-lecture-container{
+    font-size: 20px;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    cursor: pointer;
+    background-color: white;
+    border-radius: 50%;
+    color: black;
+    border: solid 1px #ccc;
+    padding: 5px 10px;
+}
+
+.name-input-container input {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    border-radius: 5px;
+}
+
+#lecture-description {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    border-radius: 5px;
+}
+
+#create-lecture-button {
+    padding: 10px;
+    background-color: rgba(48, 140, 190, 0.62);
+    color: #000000;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: 0.3s ease;
+}
+
+#create-lecture-button:hover {
+    background-color: rgba(0, 81, 255, 0.61);
+}
