--- a/src/main/resources/META-INF/resources/styles/style.css
+++ b/src/main/resources/META-INF/resources/styles/style.css
@@ -365,6 +365,13 @@ code {
     color: #fff;
 }
 
+.loading-with-message{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
 
 
 @media (max-width: 850px){
