--- a/src/main/resources/META-INF/resources/styles/mcStyle.css
+++ b/src/main/resources/META-INF/resources/styles/mcStyle.css
@@ -78,6 +78,14 @@
     border: var(--highlight-color) 2px solid;
 }
 
+#question-result-container{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
 .question-result{
     padding: 15px;
     color: #000;
