Bei besprechung von Quiz werden nun vorschläge was der Nutzer fragen kann gemacht

--- a/src/main/resources/META-INF/resources/styles/mcStyle.css
+++ b/src/main/resources/META-INF/resources/styles/mcStyle.css
@@ -99,3 +99,11 @@
         flex-direction: column;
     }
 }
+
+.possible-questions{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    flex-wrap: nowrap;
+    gap: 5px;
+}
