Design der vorschläge geändert um klarer zu machen warum diese da sind

--- a/src/main/resources/META-INF/resources/styles/darkmode.css
+++ b/src/main/resources/META-INF/resources/styles/darkmode.css
@@ -151,3 +151,18 @@ a{
     color: #fff;
 }
 
+.dark-mode .possible-question-button{
+    color: #fff;
+    background-color: #282828;
+}
+
+.dark-mode .possible-question-button:hover{
+    background-color: #555555;
+}
+
+.dark-mode .possible-question-button:before{
+    content: url("../pictures/share-solid-grey.svg");
+    display: inline-block;
+    width: 15px;
+    margin-inline: 2px;
+}
