--- a/src/main/resources/templates/multipleChoice.html
+++ b/src/main/resources/templates/multipleChoice.html
@@ -91,7 +91,7 @@
 
 
     {/eventListener}
-    {#inputText}Lernen wir heute...{/inputText}
+    {#inputText}Chatte mit mir...{/inputText}
     {#clearMessagesExtension}
 
         const quizUIService = new QuizUIService(uiService, multipleChoiceService, [{#for lecture in lectures}{| { |}"name":"{lecture.name}", "id":"{lecture.id}"{| } |},{/for}]);
